# line-echo-bot-inspiration-helper

./: .env.example  .gitignore  CAPTURE_WORKFLOW_SPEC.md  Procfile  README.md  authorize_gdrive_oauth.py  desktop_voice_capture.py  desktop_voice_config.example.json  desktop_voice_manager.py  main.py  open_desktop_voice_manager.cmd  pyproject.toml  test_bot.py  voice_dictionary.example.txt  zeabur.json
docs/linebot-usage/: README.md
web_clipper_templates/: README.md  line-inspiration-selection-clip.json  line-inspiration-web-clip.json
