[project]
name = "line-echo-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=1.0.0",
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "gevent>=25.9.1",
    "google-generativeai>=0.8.6",
    "gunicorn>=24.1.1",
    "line-bot-sdk>=3.22.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.2.0",
    "keyboard>=0.13.5",
    "notion-client>=2.2.0",
    "numpy>=2.0.0",
    "openai>=2.15.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
